[fix] - updated services spacing and styling and moved images to the cloud

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,51 +228,19 @@ body {
 }
 
 /* ################### Services ###################  */
-#services .container-flex{
-    padding: 4em 0;
+#services {
+    padding: 1em;
 }
 
-#services .product-card{
-    padding: 1em ;
+#services .product-card {
+    padding: 1em;
+    max-width: 780px;
 }
 
 #services .card {
     background-color: #00428d;
     border: 2px solid #be3f28;
-    padding: 0;
-
 }
-
-.product-img{
-    padding: 0 0 0 0;
-    height: 100%;
-}
-
-
-#services .card button {
-    margin: 5px;
-
-}
-
-#services .card h5 {
-    text-transform: uppercase;
-    font-weight: 400;
-    padding-top: 1em;
-    padding-bottom: 5px;
-    padding-left: 0;
-    margin: 0;
-    font-size: 1.3em;
-    border-bottom: 3px solid #fa4c33;
-}
-
-#services .card p {
-    font-weight: 300;
-    text-align: left;
-    padding-top: 1.2em;
-    padding-right: 10px;
-}
-
-
 
 #services img {
     margin: 0;
@@ -286,13 +254,34 @@ body {
     cursor: pointer;
 }
 
-/*.service-btn {*/
-/*    position: absolute;*/
-/*    bottom: 0;*/
-/*    right: 0;*/
-/*    padding-right: 2.5em;*/
-/*    padding-bottom: 0.5em;*/
-/*}*/
+.product-img {
+    padding: 0 2em 0 0;
+    z-index: 2;
+}
+
+.product-button {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    margin: 5px;
+}
+
+#services .card h5 {
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 10px 0;
+    margin: 0;
+    font-size: 1.5em;
+    border-bottom: 3px solid #fa4c33;
+}
+
+#services .card p {
+    font-weight: 400;
+    text-align: left;
+    padding-top: 1.2em;
+    padding-right: 10px;
+}
+
 
 /* modal */
 
@@ -326,9 +315,10 @@ body {
 
 
 /* ################### Contact form ###################  */
-#contact{
+#contact {
     padding: 1em;
 }
+
 #contact .container {
     padding: 2em 0;
 }
@@ -373,7 +363,7 @@ body {
     border-left: 2px solid #fa4c33;
 }
 
-#contact-form input{
+#contact-form input {
     background-color: #003d7a;
     border: 0;
     border-radius: 5px;
@@ -397,7 +387,7 @@ body {
     color: rgba(255, 255, 255, 0.5);
 }
 
-#map{
+#map {
     padding: 0 0 0 10px;
 }
 
@@ -491,66 +481,51 @@ body {
 
 
 @media (max-width: 991px) {
-    #logo {
-        padding-left: 5px;
-    }
+    /*#logo {*/
+    /*    padding-left: 5px;*/
+    /*}*/
 
-    .txt-header-title h1 {
-        padding: 2em 0 0 0.2em;
-        font-size: 1.5em;
-    }
+    /*.txt-header-title h1 {*/
+    /*    padding: 2em 0 0 0.2em;*/
+    /*    font-size: 1.5em;*/
+    /*}*/
 
-    .txt-header-title p {
-        font-size: 1em;
-        font-weight: 200;
-        padding-left: 05px;
-    }
+    /*.txt-header-title p {*/
+    /*    font-size: 1em;*/
+    /*    font-weight: 200;*/
+    /*    padding-left: 05px;*/
+    /*}*/
 
-    .txt-header-title button {
-        margin-bottom: 0;
-    }
-
-
-    #about-container .card-body h5 {
-        font-size: 1.5em;
-    }
-
-    #about-container .card-body p {
-        font-size: 1em;
-        font-weight: 200;
-    }
-
-    .review-text {
-        padding: 3em 2em;
-    }
-
-    /*#services {*/
-    /*    padding-top: 5em;*/
+    /*.txt-header-title button {*/
+    /*    margin-bottom: 0;*/
     /*}*/
 
 
-    #services .card button {
-        padding: 5px;
+    /*#about-container .card-body h5 {*/
+    /*    font-size: 1.5em;*/
+    /*}*/
 
-    }
+    /*#about-container .card-body p {*/
+    /*    font-size: 1em;*/
+    /*    font-weight: 200;*/
+    /*}*/
 
-    .service-btn {
+    /*.review-text {*/
+    /*    padding: 3em 2em;*/
+    /*}*/
+
+    /* ############### services ################*/
+    .product-img {
         padding: 0;
-    }
-
-    #services .card h5 {
-        padding: 0.3em 1em;
-        margin: 0;
-        font-size: 1.3em;
     }
 
     #services .card p {
         font-weight: 300;
-        padding: 0 1.5em 2.5em;
+        padding: 0 1em 2em;
         margin: 1em 0;
-        font-size: 1em;
     }
 
+    /* ############### contact form ################*/
     #contact .enquiry {
         height: 200px;
     }
@@ -561,25 +536,14 @@ body {
     }
 
 
-    #modal-all input {
-        margin-bottom: 0;
-    }
+    /*#modal-all input {*/
+    /*    margin-bottom: 0;*/
+    /*}*/
 
-    address {
-        margin-bottom: 0;
-    }
 
-    #modal-all input {
-        margin-bottom: 0;
-    }
-
-    address {
-        margin-bottom: 0;
-    }
-
-    .review-text {
-        padding: 1em 2em;
-    }
+    /*.review-text {*/
+    /*    padding: 1em 2em;*/
+    /*}*/
 
 
 }
